# TDD-UNITY-CMAKE-FFF-on-STM32

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  STM32U083xx_FLASH.ld  STM32U083xx_RAM.ld  TDD-UNITY-CMAKE-FFF-on-STM32.ioc
.github/workflows/: build-and-test.yml  main.yml
Core/Inc/: main.h  stm32u0xx_it.h  stm32u0xx_nucleo_conf.h
Core/Src/: gpio.c  main.c  stm32u0xx_it.c  usart.c
UserCore/: ledDriver.c  ledDriver.h
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
tests/: CMakeLists.txt  test_ledDriver.c  test_sanity.c  unity_config.h  unity_uart_output.c  unity_uart_output.h
tests/Core/: main.c  test_ledDriver.c  test_wolksvagen.c  test_wolksvagen.h
